--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,20 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff0070;
+  --text-color: #F1B2CE;
+  --hover-color: rgba(255, 0, 122, 0.4);
+  --bg-color: #000028;
+  --title-cover: #DB00FF;
+  --text-color-decor: #000028;
+  --color-heading: #ff0070;
+  --background-image: url(../images/cover-image-dark.png);
+}
+
+.page.theme_dark .header__decor {
+  display: block;
+}
+
+.page.theme_dark .header__rec {
+  display: block;
 }
