--- a/styles/light.css
+++ b/styles/light.css
@@ -3,10 +3,40 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
-  */
+  */  
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --hover-color: rgba(50, 49, 45, 0.4);
+  --bg-color: #fff1f7;
+  --title-cover: #ffc2e6;
+  --text-color-decor: #353430;
+  --color-heading: #353430;
+  --background-image: url(../images/cover-image-light.png);
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #ff8dcb;
+    --text-color: #353430;
+    --hover-color: rgba(50, 49, 45, 0.4);
+    --bg-color: #fff1f7;
+    --title-cover: #ffc2e6;
+    --text-color-decor: #353430;
+    --color-heading: #353430;
+    --background-image: url(../images/cover-image-light.png);
+  }
+
+  .page .header__decor {
+    display: none;
+  }
+  
+  .page .header__rec {
+    display: none;
+  }
+}
+
+
