--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,21 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --main-font: 'IBM Plex mono';
+  --font-size: 18px;
+  --font-weight-bolt: 700;
+  --font-weight-regular: 400;
+  --line-height: 1.3;
+  --accent-color: #ff0070;
+  --text-color: #F1B2CE;
+  --hover-color: rgba(255, 0, 122, 0.4);
+  --bg-color: #000028;
+  --title-cover: #DB00FF;
+  --text-color-decor: #000028;
+  --color-heading: #ff0070;
+  --background-image: url(../images/cover-image-dark.png);
+  /* Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём. */
+
+}
