--- a/styles/style.css
+++ b/styles/style.css
@@ -173,6 +173,10 @@
   margin-bottom: 10px;
 }
 
+.card__text {
+  line-height: 1.3;
+}
+
 .text__link {
   text-decoration: none;
   text-shadow: 2px 2px 0px var(--accent-color);
@@ -447,5 +451,5 @@
   .footer__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
-  
+
 }
