--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   background-image: var(--background-image);
   color: var(--text-color);
+  background-color: var(--bg-color);
   font-family: var(--main-font, sans-serif);
   font-size: var(--font-size);
   font-weight: var(--font-weight-regular);
@@ -171,10 +172,6 @@
   font-size: var(--font-size);
   font-weight: var(--font-weight-bolt);
   margin-bottom: 10px;
-}
-
-.card__text {
-  line-height: 1.3;
 }
 
 .text__link {
