--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
   background-color: transparent;
   border: none;
   text-transform: lowercase;
-  color: var(--accent-color);
+  color: var(--color-heading);
   cursor: pointer;
   padding: 2.5px 13px 2.5px 13px;
   font-style: normal;
@@ -48,7 +48,7 @@
 
 .header__theme-menu-button:hover {
   cursor: pointer;
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid var(--hover-color);
   border-block-end: 1px solid transparent;
 }
 
@@ -57,11 +57,11 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--accent-color);
+  border-block-end: 1px solid var(--color-heading);
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid var(--color-heading);
   pointer-events: none;
 }
 
@@ -72,8 +72,8 @@
   z-index: 1;
   width: 25px;
   height: 25px;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
+  border-block-start: 1px solid var(--color-heading);
+  border-inline-end: 1px solid var(--color-heading);
   top: 20px;
   left: 979px;
 }
@@ -85,13 +85,13 @@
   z-index: 1;
   width: 25px;
   height: 25px;
-  border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);
+  border-block-end: 1px solid var(--color-heading);
+  border-inline-start: 1px solid var(--color-heading);
   top: 723px;
   left: 20px;
 }
 
-.header__rec::after {
+.header__decor::before {
   content: "REC";
   display: block;
   position: absolute;
@@ -145,8 +145,9 @@
 }
 
 .content__section {
-  padding: 60px 20px 80px 20px;
-  display: flex;
+  padding: 60px 20px 20px 20px;
+  display: grid;
+  grid-template-columns: 315px 1fr 1fr;
   gap: 20px;
 }
 
@@ -158,13 +159,24 @@
 }
 
 .content__section-list {
+  grid-column: span 2;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.content__section-list-item {
-  width: 649px;
+.content__section-list-lots {
+  grid-column: span 3;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.content__section-block {
+  grid-column: span 2;
+}
+
+.content__section-list-advice {
+  margin-top: 20px;
 }
 
 .card__title {
@@ -184,49 +196,11 @@
 }
 
 .text__link:hover {
-  border-block-end: 1px solid var(--accent-color);
+  border-block-end: 1px solid var(--text-color);
 }
 
 .text__link:focus-visible {
-  outline: 1px solid var(--accent-color);
-}
-
-.content__section-lots {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.lots__title {
-  padding-right: 689px;
-}
-
-.content__section-lots-list {
-  display: flex;
-  gap: 20px;
-}
-
-.content__section-lots-list-item {
-  width: 315px;
-}
-
-.content__section-advice {
-  display: flex;
-  gap: 20px;
-  padding: 80px 20px;
-}
-
-.content__section-advice-block {
-  max-width: 649px;
-}
-
-.content__section-advice-list {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: 20px;
+  outline: 1px solid var(--text-color);
 }
 
 .card__title-advice {
@@ -234,8 +208,7 @@
 }
 
 .gallery {
-  margin-left: 20px;
-  margin-right: 20px;
+  padding: 60px 20px 20px 20px;
 }
 
 .gallery__container {
@@ -244,54 +217,41 @@
   gap: 20px;
 }
 
-.sunset__img {
-  grid-column: 1/3;
-  grid-row: 1/2;
+.gallery__container-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+.sunset__img {
+  grid-column: 1/3;
+  grid-row: 1/2;
 }
 
 .ice-cream__img {
   grid-column: 3/4;
   grid-row: 1/3;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
 }
 
 .tape__img {
   grid-column: 1/2;
   grid-row: 2/4;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
 }
 
 .book__img {
   grid-column: 2/3;
   grid-row: 2/3;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
 }
 
 .street__img {
   grid-column: 2/4;
   grid-row: 3/4;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
 }
 
 .footer {
-  margin-top: 60px;
-  padding: 20px;
+  margin-top: 40px;
+  padding: 0;
   display: flex;
   height: 100vh;
   min-height: 768px;
@@ -327,38 +287,28 @@
     top: 979px;
   }
 
-  .header__rec::after {
+  .header__decor::before {
     left: 687px;
   }
   
   .header__decor::after {
     left: 730px;
   }
-  
-  .content__section-list-item {
-    width: 472px;
-  }
-  
-  .lots__title {
-    padding-right: 512px;
-  }
-  
-  .content__section-lots-list {
-    flex-direction: column;
-  }
-  
-  .content__section-lots-list-item {
-    width: 728px;
+
+  .content__section {
+    grid-template-columns: 236px 1fr 1fr;
   }
 
-  .content__section-advice-block {
-    max-width: 472px;
+  .content__section-list-lots {
+    grid-column: span 3;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 
   .footer {
     min-height: 1024px;
   }
-
 }
 
 @media (width<=767px) {
@@ -382,6 +332,11 @@
     top: 10px;
   }
   
+  .header__decor::before {
+    left: 304px;
+    top: 10px;
+  }
+  
   .header__decor::after {
     left: 347px;
     top: 18px;
@@ -397,39 +352,13 @@
   }
 
   .content__section {
-    padding: 40px 10px 50px 10px;
-    flex-direction: column;
-  }
-  
-  .content__section-list-item {
-    width: 355px;
-  }
-  
-  .content__section-lots {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  
-  .lots__title {
-    padding-right: 0;
-  }
-  
-  .content__section-lots-list-item {
-    width: 355px;
-  }
-
-  .content__section-advice {
-    flex-direction: column;
-    padding: 50px 10px;
-  }
-  
-  .content__section-advice-block {
-    max-width: 355px;
+    padding: 40px 10px 10px 10px;
+    display: flex;
+    flex-direction: column ;
   }
 
   .gallery {
-    margin-left: 10px;
-    margin-right: 10px;
+    padding: 40px 10px 10px 10px;
   }
   
   .gallery__container {
@@ -440,7 +369,7 @@
   }
   
   .footer {
-    margin-top: 40px;
+    margin-top: 30px;
     padding: 10px;
     min-height: 668px;
   }
@@ -448,5 +377,4 @@
   .footer__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
-
 }
